# WinHacks2025

./: README.md  pyproject.toml  recipes.db  wsgi.py
recipes/: template  test.json
recipes/alfredo_sauce/: data.json
recipes/beef_schnitzel/: data.json
recipes/beef_wellington/: data.json
recipes/caesar_salad/: data.json
recipes/chicken_alfredo/: data.json
recipes/filet_mignon/: data.json
recipes/french_toast/: data.json
recipes/lava_cake/: data.json
recipes/omelette/: data.json
recipes/pizza/: data.json
winhacks2025/: app.py
winhacks2025/blueprints/: __init__.py  home.py  recipes.py
winhacks2025/database/: Recipe.py  User.py  __init__.py  cursor.py  db.py  test.py
winhacks2025/static/scripts/: modal.js  recipe_player.js
winhacks2025/static/styles/: base.css  navbar.css  recipeplayer.css
winhacks2025/templates/: base.html  home.html  minimal_base.html  recipe_player.html
